# pyimagecuda

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml
adjust/: index.html
benchmarks/: BENCHMARK_REPORT.md  benchmarks.py  blend.py  crop.py  flip.py  gaussian_blur.py  index.html  resize.py  rotate.py
blend/: index.html
docs/: adjust.md  benchmarks.md  blend.md  effect.md  fill.md  filter.md  image.md  index.md  io.md  opengl.md  resize.md  text.md  transform.md
effect/: index.html
examples/: blend.py  effect.py  filters.py  quick.py  resize.py
examples/adjust/: adjust_brightness_down.py  adjust_brightness_up.py  adjust_contrast_down.py  adjust_contrast_up.py  adjust_gamma_down.py  adjust_gamma_up.py  adjust_hue_180.py  adjust_hue_cool.py  adjust_hue_warm.py  adjust_opacity_half.py  adjust_opacity_subtle.py  adjust_saturation_up.py  adjust_saturation_zero.py  adjust_vibrance_landscape.py  adjust_vibrance_portrait.py  brillo.py
examples/blend/: blend_add.py  blend_anchor.py  blend_hard_light.py  blend_mask.py  blend_multiply.py  blend_normal.py  blend_offset.py  (+3 more)
fill/: index.html
filter/: index.html
image/: index.html
io/: index.html
opengl/: index.html
pyimagecuda/: __init__.py  adjust.py  blend.py  effect.py  fill.py  filter.py  image.py  io.py  resize.py  transform.py  utils.py
resize/: index.html
scripts/: generate_include_h_and_python_wrapper.py
src/: common.h  include.h  python_wrapper.cpp
tests/: tests.py
text/: index.html
transform/: index.html
(+107 files in other folders)
