[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pyimagecuda"
version = "0.0.7"
description = "GPU-accelerated image processing library for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Beltrán Offerrall"}]
dependencies = ["pyvips[binary]"]

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.packages = []